src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_median_dim(value self, int64_t dim, int keepdim);
value atg_median_dim_values(value values, value indices, value self, int64_t dim, int keepdim);
value atg_median_out(value out, value self);
value atg_meshgrid(value tensors);
value atg_meshgrid_indexing(value tensors, const char * indexing);
value atg_mh(value self);
value atg_min(value self);
value atg_min_dim(value self, int64_t dim, int keepdim);
value atg_min_dim_min(value min, value min_indices, value self, int64_t dim, int keepdim);
value atg_min_other(value self, value other);
value atg_min_out(value out, value self, value other);
value atg_min_unary_out(value out, value self);
value atg_minimum(value self, value other);
value atg_minimum_out(value out, value self, value other);
value atg_miopen_batch_norm(value input, value weight, value bias, value running_mean, value running_var, int training, double exponential_average_factor, double epsilon);
value atg_miopen_batch_norm_backward(value input, value grad_output, value weight, value running_mean, value running_var, value save_mean, value save_var, double epsilon);
value atg_miopen_batch_norm_backward_out(value out0, value out1, value out2, value input, value grad_output, value weight, value running_mean, value running_var, value save_mean, value save_var, double epsilon);
value atg_miopen_batch_norm_out(value out0, value out1, value out2, value input, value weight, value bias, value running_mean, value running_var, int training, double exponential_average_factor, double epsilon);
value atg_miopen_convolution(value self, value weight, value bias, value padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic);
value atg_miopen_convolution_add_relu(value self, value weight, value z, value alpha, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_miopen_convolution_out(value out, value self, value weight, value bias, value padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic);
value atg_miopen_convolution_relu(value self, value weight, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_miopen_convolution_transpose(value self, value weight, value bias, value padding, value output_padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic);
value atg_miopen_convolution_transpose_out(value out, value self, value weight, value bias, value padding, value output_padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic);
value atg_miopen_depthwise_convolution(value self, value weight, value bias, value padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic);
value atg_miopen_depthwise_convolution_out(value out, value self, value weight, value bias, value padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic);
value atg_miopen_rnn(value input, value weight, int64_t weight_stride0, value hx, value cx, int64_t mode, int64_t hidden_size, int64_t num_layers, int batch_first, double dropout, int train, int bidirectional, value batch_sizes, value dropout_state);
value atg_miopen_rnn_out(value out0, value out1, value out2, value out3, value out4, value input, value weight, int64_t weight_stride0, value hx, value cx, int64_t mode, int64_t hidden_size, int64_t num_layers, int batch_first, double dropout, int train, int bidirectional, value batch_sizes, value dropout_state);
value atg_mish(value self);
value atg_mish_(value self);
value atg_mish_backward(value grad_output, value self);
value atg_mish_out(value out, value self);
value atg_mkldnn_adaptive_avg_pool2d(value self, value output_size);
value atg_mkldnn_adaptive_avg_pool2d_backward(value grad_output, value self);
value atg_mkldnn_adaptive_avg_pool2d_backward_out(value out, value grad_output, value self);
value atg_mkldnn_adaptive_avg_pool2d_out(value out, value self, value output_size);
value atg_mkldnn_convolution(value self, value weight, value bias, value padding, value stride, value dilation, int64_t groups);
value atg_mkldnn_convolution_out(value out, value self, value weight, value bias, value padding, value stride, value dilation, int64_t groups);
value atg_mkldnn_linear(value self, value weight, value bias);
value atg_mkldnn_linear_backward_input(value input_size, value grad_output, value weight);
value atg_mkldnn_linear_backward_input_out(value out, value input_size, value grad_output, value weight);
value atg_mkldnn_linear_backward_weights(value grad_output, value input, value weight, int bias_defined);
value atg_mkldnn_linear_backward_weights_out(value out0, value out1, value grad_output, value input, value weight, int bias_defined);
value atg_mkldnn_linear_out(value out, value self, value weight, value bias);
value atg_mkldnn_max_pool2d(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_mkldnn_max_pool2d_backward(value grad_output, value output, value input, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_mkldnn_max_pool2d_backward_out(value out, value grad_output, value output, value input, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_mkldnn_max_pool2d_out(value out, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_mkldnn_max_pool3d(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);