src/bindings/torch_bindings_generated5.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C0 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_median_dim =
    foreign
      "atg_median_dim"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_median_dim_values =
    foreign
      "atg_median_dim_values"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_median_out =
    foreign "atg_median_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_meshgrid =
    foreign "atg_meshgrid" (ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_meshgrid_indexing =
    foreign
      "atg_meshgrid_indexing"
      (ptr gc_tensor @-> int @-> string @-> returning (ptr raw_tensor))
  ;;

  let stubs_mh = foreign "atg_mh" (gc_tensor @-> returning raw_tensor)
  let stubs_min = foreign "atg_min" (gc_tensor @-> returning raw_tensor)

  let stubs_min_dim =
    foreign
      "atg_min_dim"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_min_dim_min =
    foreign
      "atg_min_dim_min"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_min_other =
    foreign "atg_min_other" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_min_out =
    foreign "atg_min_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_min_unary_out =
    foreign "atg_min_unary_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_minimum =
    foreign "atg_minimum" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_minimum_out =
    foreign
      "atg_minimum_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_miopen_batch_norm =
    foreign
      "atg_miopen_batch_norm"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs_miopen_batch_norm_backward =
    foreign
      "atg_miopen_batch_norm_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning void)
  ;;

  let stubs_miopen_batch_norm_backward_out =
    foreign
      "atg_miopen_batch_norm_backward_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning void)
  ;;

  let stubs_miopen_batch_norm_out =
    foreign
      "atg_miopen_batch_norm_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs_miopen_convolution =
    foreign
      "atg_miopen_convolution"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_miopen_convolution_add_relu =
    foreign
      "atg_miopen_convolution_add_relu"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_miopen_convolution_out =
    foreign
      "atg_miopen_convolution_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_miopen_convolution_relu =
    foreign
      "atg_miopen_convolution_relu"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_miopen_convolution_transpose =
    foreign
      "atg_miopen_convolution_transpose"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_miopen_convolution_transpose_out =
    foreign
      "atg_miopen_convolution_transpose_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_miopen_depthwise_convolution =
    foreign
      "atg_miopen_depthwise_convolution"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_miopen_depthwise_convolution_out =
    foreign
      "atg_miopen_depthwise_convolution_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_miopen_rnn =
    foreign
      "atg_miopen_rnn"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> double
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_miopen_rnn_out =
    foreign
      "atg_miopen_rnn_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> double
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_mish = foreign "atg_mish" (gc_tensor @-> returning raw_tensor)
  let stubs_mish_ = foreign "atg_mish_" (gc_tensor @-> returning raw_tensor)

  let stubs_mish_backward =
    foreign "atg_mish_backward" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mish_out =
    foreign "atg_mish_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_adaptive_avg_pool2d =
    foreign
      "atg_mkldnn_adaptive_avg_pool2d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_adaptive_avg_pool2d_backward =
    foreign
      "atg_mkldnn_adaptive_avg_pool2d_backward"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_adaptive_avg_pool2d_backward_out =
    foreign
      "atg_mkldnn_adaptive_avg_pool2d_backward_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_adaptive_avg_pool2d_out =
    foreign
      "atg_mkldnn_adaptive_avg_pool2d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_convolution =
    foreign
      "atg_mkldnn_convolution"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_convolution_out =
    foreign
      "atg_mkldnn_convolution_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_linear =
    foreign
      "atg_mkldnn_linear"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_linear_backward_input =
    foreign
      "atg_mkldnn_linear_backward_input"
      (ptr int64_t @-> int @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_linear_backward_input_out =
    foreign
      "atg_mkldnn_linear_backward_input_out"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_linear_backward_weights =
    foreign
      "atg_mkldnn_linear_backward_weights"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_mkldnn_linear_backward_weights_out =
    foreign
      "atg_mkldnn_linear_backward_weights_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs_mkldnn_linear_out =
    foreign
      "atg_mkldnn_linear_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_max_pool2d =
    foreign
      "atg_mkldnn_max_pool2d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_max_pool2d_backward =
    foreign
      "atg_mkldnn_max_pool2d_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_max_pool2d_backward_out =
    foreign
      "atg_mkldnn_max_pool2d_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_max_pool2d_out =
    foreign
      "atg_mkldnn_max_pool2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_max_pool3d =
    foreign
      "atg_mkldnn_max_pool3d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;
